Fixed styling of headers and video row for mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -142,7 +142,7 @@ form p {
   }
 
   .row.video {
-    height: 850px;
+    height: auto;
   }
 
   .material-icons {
@@ -155,6 +155,10 @@ form p {
 
   h1 {
     font-size: 2.2em;
+  }
+
+  h2 {
+    font-size: 1.8em;
   }
 
   h5 {
